calculator works: does math via inputs and submit button

--- a/calc-daniel.html
+++ b/calc-daniel.html
@@ -6,19 +6,18 @@
   </head>
   <body>
     <h1 id="test"></h1>
-    <h3>Answer bar:</h3>
       <div id="answer">
       </div>
 
     <h4>input X</h4>
-      <form id="input-x" action="">
-        <input type="text">
+      <form action="">
+        <input id="inputX" type="text">
       </form>
 
     <h4>~ select dropdown for operator ~</h4>
       <select id="operator">
-        <option> + </option>
         <option> [select] </option>
+        <option> + </option>
         <option> - </option>
         <option> * </option>
         <option> / </option>
@@ -27,8 +26,8 @@
       <br>
 
     <h4>input Y</h4>
-      <form id="input-y" action=" ">
-        <input type="text">
+      <form  action="">
+        <input id="inputY" type="text">
       </form>
 
     <button id="submit">Do Math</button>
