--- a/calc-daniel.html
+++ b/calc-daniel.html
@@ -4,6 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="/bootstrap.css" media="screen" title="no title" charset="utf-8">
     <link rel="stylesheet" href="/master.css" media="screen" title="no title" charset="utf-8">
+    <link href='/' rel='stylesheet' type='text/css'>
     <script src="/calc-daniel.js"></script>
   </head>
   <body>
@@ -17,7 +18,7 @@
       <div class="row">
         <div class ="input-container col-lg-2 col-lg-push-3 input-X-container">
           <form action="" class="input-X-form">
-            <input id="inputX" type="text" class="form-control">
+            <input id="inputX" type="text" class="form-control number">
           </form>
         </div>
 
@@ -33,7 +34,7 @@
         </div>
 
         <form  action="" class="col-lg-2 col-lg-push-3 input-Y-form">
-          <input id="inputY" type="text" class="form-control">
+          <input id="inputY" type="text" class="form-control number">
         </form>
       </div>
 
