add (commented out) HTML for beginnings of number pad (in progress)

--- a/calc-daniel.html
+++ b/calc-daniel.html
@@ -48,6 +48,32 @@
               <button id="clear" class="btn btn-danger btn-xl">CE</button>
             </div>
           </div>
+
+          <!-- <div class="row digits-row">
+            <div class="col-lg-10 col-lg-push-1 digit-buttons">
+              <div class="3-digit-container">
+                <button class="col-lg-2">              1</button>
+                <button class="col-lg-2 col-lg-push-1">2</button>
+                <button class="col-lg-2 col-lg-push-2">3</button>
+              </div>
+            </div>
+          </div>
+
+          <div class="row digits-row">
+            <div class="col-lg-10 col-lg-push-1 digit-buttons">
+              <div class="3-digit-container">
+                <button class="col-lg-2">              4</button>
+                <button class="col-lg-2 col-lg-push-1">5</button>
+                <button class="col-lg-2 col-lg-push-2">6</button>
+              </div>
+            </div>
+
+            </div>
+            <div class="col-lg-1">
+              <span>abcd</span>
+
+            </div> -->
+          </div>
         </div>
       </form>
     </div>
